--- a/src/main/resources/static/html/manageCourses.html
+++ b/src/main/resources/static/html/manageCourses.html
@@ -105,9 +105,13 @@
 
 </div>
 
-<script src="../js/app/app.js"></script>
-<script src="../js/directives/directive.js"></script>
-<script src="../js/controllers/controller.js"></script>
+    <script src="../js/app/app.js"></script>
+    <script src="../js/directives/directive.js"></script>
+    <script src="../js/factory/urlFactory.js"></script>
+    <script src="../js/login/loginService.js"></script>
+    <script src="../js/skill/skillService.js"></script>
+    <!--<script src="../js/login/loginController.js"></script>-->
+    <script src="../js/skill/skillController.js"></script>
 </body>
 </html>
 
