--- a/src/main/resources/static/html/profilePage.html
+++ b/src/main/resources/static/html/profilePage.html
@@ -180,8 +180,14 @@
         </div>
       </div>
     </div>
-    <script src="../js/app/app.js"></script>
-    <script src="../js/directives/directive.js"></script>
-    <script src="../js/controllers/controller.js"></script>
+      <script src="../js/app/app.js"></script>
+      <script src="../js/directives/directive.js"></script>
+      <script src="../js/factory/urlFactory.js"></script>
+      <script src="../js/login/loginService.js"></script>
+      <script src="../js/signUp/signUpService.js"></script>
+      <script src="../js/skill/skillService.js"></script>
+      <!--<script src="../js/login/loginController.js"></script>-->
+      <script src="../js/signUp/signUpController.js"></script>
+      <script src="../js/skill/skillController.js"></script>
   </body>
 </html>
