--- a/src/main/resources/static/html/signup_page.html
+++ b/src/main/resources/static/html/signup_page.html
@@ -139,8 +139,11 @@
         </div>
       </div>
     </div>
-    <script src="../js/app/app.js"></script>
-    <script src="../js/directives/directive.js"></script>
-    <script src="../js/controllers/controller.js"></script>
+      <script src="../js/app/app.js"></script>
+      <script src="../js/directives/directive.js"></script>
+      <script src="../js/factory/urlFactory.js"></script>
+      <script src="../js/login/loginService.js"></script>
+      <script src="../js/signUp/signUpService.js"></script>
+      <script src="../js/signUp/signUpController.js"></script>
   </body>
 </html>
