--- a/src/main/resources/static/html/categorySidebar.html
+++ b/src/main/resources/static/html/categorySidebar.html
@@ -1,15 +1,23 @@
 <div id="wrapper">
     <div id="sidebar-wrapper">
         <!-- Sidebar -->
+
         <div class="categorybar">
-            <label style="font-size:16px; letter-spacing: 0.08em; color:white">Categories</label>
+            <label style="font-size:20px; letter-spacing: 0.08em; color:white">Categories</label>
         </div>
 
         <div ng-controller='MainController' style="font-size:12px; letter-spacing: 0.08em; color:white">
-  <span ng-repeat="category in categories">
-    <input type='checkbox' value="{{category}}" check-list='checked_category'> {{category}}<br/>
-  </span>
+        <!--<div flex-gt-sm="50" ng-repeat="category in categories">
+          <md-checkbox md-no-ink ng-click="toggle(category)" check-list='checked_category'>
+            {{ category }}
+          </md-checkbox>
+        </div>-->
+
+        <span ng-repeat="category in categories">
+            <input type='checkbox' value="{{category}}" check-list='checked_category'> {{category}}<br/>
+          </span>
         </div>
+
 
 
     </div>
@@ -17,6 +25,6 @@
 
 <style>
   .categorybar{
-      top:40px;
+      top:5%;
   }
 </style>
