--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -7,6 +7,7 @@
         <title>ShowYourSkillz</title>
         <link rel="stylesheet" href="../css/bootstrap.min.css" media="screen" > 
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.css">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/homestyle.css">
         <link rel="stylesheet" href="../css/simple-sidebar.css" >
         <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -52,84 +53,19 @@
                 </div>
             </div>
         </nav>   
-        <div  ng-include="'categorySidebar.html'"></div>
-        <div style="z-index: -1;" ng-include="'skillsHolder.html'"></div>
-        <script type="text/ng-template" id="/tpl.html">
-            <md-dialog aria-label="Add skill">
-                <div layout="column" ng-cloak class="md-inline-form">
-                    <md-toolbar>
-                        <div class="md-toolbar-tools">
-                            <h2>Post a new skill</h2>
-                            <span flex></span>
-                            <md-button class="md-primary" ng-click="cancel()">Cancel</md-button>
-                        </div>  
-                    </md-toolbar>
-                    <md-dialog-content layout-padding>
-                        <div>
-                            <form name="userForm" ng-submit="submitForm(userForm.$valid)" ng-cloak novalidate>
-                                <div layout-gt-sm="row">
-                                    <md-input-container class="md-block" flex-gt-xs id="skill_name"> 
-                                        <label>Skill Name</label>
-                                        <input ng-model="skill_name" class='form-control' id='Skill Name' placeholder='Skill Name' type='text' name="skill_name" ng-required="true">
-                                        <div ng-messages="userForm.skill_name.$error" ng-show="userForm.skill_name.$invalid && userForm.skill_name.$touched">
-                                            <div ng-message-exp="['required']" ng-hide="userForm.skill_name.$valid">
-                                                <span translate>Skill name is required.</span>
-                                            </div>
-                                        </div>
-                                    </md-input-container>
-                                </div>
-                                <div>
-                                    <md-input-container class="md-block" flex>
-                                        <label>Category</label>
-                                        <md-select ng-model="categoryChoice" name="skill_category">
-                                            <md-option ng-value="category.name" ng-repeat="category in categories">{{ category.name }}</md-option>
-                                        </md-select>
-                                    </md-input-container>
-                                    <md-input-container class="md-block" layout-xs="row">
-                                        <label class="Skill-timings">Timings</label><br/>
-                                        <fieldset data-ng-repeat="choice in choices" class="md-block">
-                                        <md-input-container class="day" flex-gt-sm>
-                                            <label>Day</label>
-                                            <md-select ng-model="choice.day">
-                                                <!--<md-optgroup label="Day">-->
-                                                    <md-option ng-value="weekDay.name" ng-repeat="weekDay in days">
-                                                    {{weekDay.name}}
-                                                    <!--</md-option>-->
-                                                </md-optgroup>
-                                            </md-select>
-                                        </md-input-container>
-                                        <md-input-container flex-gt-sm>
-                                            <label>To</label>
-                                            <input type="time" id="exampleInput" name="input" ng-model="choice.toTime"
-                                            placeholder="To" required/>
-                                        </md-input-container>
-                                        <md-input-container flex-gt-sm>
-                                            <label>From</label>
-                                            <input type="time" id="exampleInput" name="input" ng-model="choice.fromTime"
-                                            placeholder="From" required/>
-                                        </md-input-container>                
-                                        <md-button class="remove md-raised md-warn" ng-show="$last" ng-click="removeChoice()">-</md-button>
-                                    </fieldset>
-                                    <md-button class="addfields md-raised md-primary" ng-click="addNewChoice()">+</md-button>
-                                </md-input-container>
-                            </div></br>
-                            <md-input-container class="md-block">
-                                <label>Description</label>
-                                    <div>
-                                        <textarea ng-model="description" class='form-control' id='id_description' placeholder='Description' rows='3'></textarea>
-                                    </div>
-                            </md-input-container>
-                            <md-dialog-actions layout="row" layout-align="center center" layout-wrap>
-                                <md-button class='md-raised md-primary' type="submit" ng-disabled="userForm.$invalid" ng-click="register()">Add Skill</md-button>
-                            </md-dialog-actions>          
-                        </form>
-                        </div>
-                    </md-dialog-content>
-                </div>  
-            </md-dialog>
-        </script>
+        <div class = "wrapper" style="padding-top: 7%;"> 
+            <div class = "col-lg-2 col-md-2 col-sm-2 col-xs-2" ng-include="'categorySidebar.html'"></div>
+            <div class = "col-lg-10 col-md-10 col-sm-10 col-xs-10" ng-include="'skillsHolder.html'"></div>
+        </div>
+        <!--<script type="text/ng-template" id="/tpl.html"> style="z-index: -1;"
+            
+        </script>-->
         <script src="../js/app/app.js"></script>
         <script src="../js/directives/directive.js"></script>
-        <script src="../js/controllers/controller.js"></script>
+        <script src="../js/factory/urlFactory.js"></script>
+        <script src="../js/login/loginService.js"></script>
+        <script src="../js/skill/skillService.js"></script>
+        <script src="../js/login/loginController.js"></script>
+        <script src="../js/skill/skillController.js"></script>
     </body>
 </html>
