--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -23,7 +23,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
         <!--<script src="../js/script.js"></script>-->
     </head>
-    <body ng-app="SkillsApp" ng-controller="homeCntrl" ng-cloak>
+    <body ng-app="SkillsApp" ng-controller="homeCntrl" class= "dialogUsage" id="popupContainer" ng-cloak>
         <nav id="header-nav" class="navbar default navbar-light bg-faded">
             <div class="container-fluid">
                 <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
