controller for view course created

--- a/src/main/resources/static/html/manageCourses.html
+++ b/src/main/resources/static/html/manageCourses.html
@@ -79,7 +79,7 @@
                     <div class="thumbnail">
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">{{ skill.skillName }}</h4>
-                            <p class="group inner list-group-item-text">{{ skill.skillDescription }}</p>
+                            <!--<p class="group inner list-group-item-text">{{ skill.skillDescription }}</p>-->
                             <p class="group inner list-group-item-text">Category: {{ skill.category }}</p>
                             <p class="group inner list-group-item-text">Popularity count: {{ skill.numberOfInterestedPeople }}</p>
                             <!--<p class="group inner list-group-item-text">Timings:{{skill.skillTimings}}</p>-->
