minor changes in category sidebar

--- a/src/main/resources/static/html/categorySidebar.html
+++ b/src/main/resources/static/html/categorySidebar.html
@@ -24,7 +24,7 @@
           </div>
 
           <span ng-repeat="filter in filters">
-            <input type='checkbox' value="{{filter}}" check-list='checked_filter'> {{filter}}<br><br>
+            <input type='checkbox' value="{{filter}}" check-list='checked_category'> {{filter}}<br><br>
           </span>
 
         </div>
