--- a/src/main/resources/static/html/profilePage.html
+++ b/src/main/resources/static/html/profilePage.html
@@ -23,33 +23,44 @@
       <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
       <!--<script src="../js/script.js"></script>-->
   </head>
-  <body ng-app="SkillsApp" ng-controller="profileCntrl">
-    <nav id="header-nav" class="navbar default navbar-light bg-faded">
-      <div class="container-fluid">
-        <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
-          <a class="navbar-brand" href="/html/home.html">ShowYourSkillz</a></li>
-        </div>
-        <div class="nav pull-right col-sm-4 col-xs-5 col-md-3">
-          <ul class="nav navbar-nav pull-right">
-            <li class="btn-group" id="menuLogin">
-              <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{f_name}}</button>
-              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-              </button>
-              <div class="dropdown-menu">
-                <p>
-                  <a class="btn btn-outline-success" href="#">Profile</a>
-                </p>
-                <div class="dropdown-divider">
-                  <a href="#" type="submit" ng-click="logout()">Logout</a>
+  <body ng-app="SkillsApp" ng-cloak>
+    <nav class="navbar navbar-fixed-top z-depth-1" role="navigation">
+        <!--<nav id="header-nav" class="navbar default navbar-light bg-faded">-->
+            <!--<div class="container-fluid">-->
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand waves-effect waves-light" href="/html/home.html">ShowYourSkillz</a></li>
                 </div>
-              </div>
-	        </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+                <div class="collapse navbar-collapse navbar-right" ng-controller="profileCntrl"  id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav btn-group">
+                        <li class="nav-item dropdown" id="menuLogin">
+                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{name}}</button>
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
+                                <span class="caret"></span>
+                                <span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li>
+                                    <a href="profilePage.html">Profile</a>
+                                </li>
+                                <li>
+                                    <a href="#" ng-click="openDialog()">Add Skill</a>
+                                </li>
+                                <li class="dropdown-divider">
+                                    <a href="#" ng-click="logout()">Logout</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     <div class="wrapper">
       <div class="col-lg-2 col-sm-3 col-xs-3 col-md-2" id="sideList">
         <div class="grid1">
