--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -23,9 +23,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
         <!--<script src="../js/script.js"></script>-->
     </head>
-    <body ng-app="SkillsApp" class= "dialogUsage" id="popupContainer" ng-cloak>
-        <nav class="navbar navbar-fixed-top z-depth-1" role="navigation">
-        <!--<nav id="header-nav" class="navbar default navbar-light bg-faded">-->
+    <body ng-app="SkillsApp" class= "dialogUsage" id="popupContainer" ng-controller="homeCntrl" ng-cloak>
+        <!--<nav class="navbar navbar-fixed-top" role="navigation">-->
+        <nav id="header-nav" class="navbar default navbar-light bg-faded">
             <!--<div class="container-fluid">-->
             <div class="container">
                 <div class="navbar-header">
@@ -37,7 +37,7 @@
                     </button>
                     <a class="navbar-brand waves-effect waves-light" href="/html/home.html">ShowYourSkillz</a></li>
                 </div>
-                <div class="collapse navbar-collapse navbar-right" ng-controller="homeCntrl"  id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse navbar-right"  id="bs-example-navbar-collapse-1">
                     <!--<div class="btn-group">
                         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Basic dropdown</button>
                             <div class="dropdown-menu">
