--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -94,7 +94,7 @@
     </style>
     <!--<script src="js/script.js"></script>-->
 </head>
-<body ng-app="SkillsApp">
+<body ng-app="SkillsApp" ng-controller="LoginCtrl">
     <nav class="navbar navbar-fixed-top z-depth-1" role="navigation">
     <!--<nav id="header-nav" class="navbar default navbar-light bg-faded">-->
         <div class="container">
@@ -108,7 +108,7 @@
                 </button>
                 <a class="navbar-brand waves-effect waves-light" href="index.html">ShowYourSkillz</a>
             </div>
-            <div class="collapse navbar-collapse navbar-right" ng-controller="LoginCtrl"  id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
             <!--<ul id="nav-mobile" class="left">-->
                 <ul class="nav navbar-nav">
                     <li class="nav-item dropdown" id="menuLogin">
