Added unsubscribe and open discussion forum button

--- a/src/main/resources/static/html/enrolledskills.html
+++ b/src/main/resources/static/html/enrolledskills.html
@@ -90,7 +90,9 @@ this page is newly developed
                             </div>
                             <div class="row">
                                 <div class="col-xs-10 col-sm-10 col-md-10">
-                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-click="subscribeForEmailNotification(course.skillId)">Subscribe for email notifications</a>
+                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-click="subscribeForEmailNotification(course.skillId)">Subscribe</a>
+                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-click="unsubscribeFromEmailNotification(course.skillId)">Unsubscribe</a>
+                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-click="openDiscussionForum()">Discussion Forum</a>
                                 </div>
                             </div>
                         </div>
