--- a/src/main/resources/static/html/skillsHolder.html
+++ b/src/main/resources/static/html/skillsHolder.html
@@ -37,7 +37,7 @@
                             <!--<md-icon style = "fill: grey;" md-svg-icon="../images/thumb_up.svg"></md-icon> && auth.allow-->
                             <i class="fa fa-thumbs-o-up fa-lg" aria-hidden="true"></i>
                         </md-button>
-                        <md-button type="button" ng-click="openSkill(skill.skillId)">View</md-button>
+                        <md-button type="button" ng-click="openSkill(skill)">View</md-button>
                         <!--md-button ng-click="viewSkill(skill.skillId)">View</md-button>-->
                         <!--<md-button>Action 2</md-button>-->
                     </md-card-actions>
