--- a/src/main/resources/static/html/profilePage.html
+++ b/src/main/resources/static/html/profilePage.html
@@ -45,7 +45,7 @@
                                 <span class="caret"></span>
                                 <span class="sr-only">Toggle Dropdown</span>
                             </button>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu collapse" aria-labelledby="navbarDropdownMenuLink">
                                 <li>
                                     <a href="profilePage.html">Profile</a>
                                 </li>
