date display issue resolved

--- a/src/main/resources/static/html/courseEdit.html
+++ b/src/main/resources/static/html/courseEdit.html
@@ -127,11 +127,11 @@
                                             </div>
                                             <div class='col-md-4' style="padding: 0px 0px 0px 0px;margin: 0px;">
                                                 <input type="time" name="toTime" class="form-control" ng-model = "time.toTime">
-                                                <span>{{ time.toTime | date: 'h:mm a' }}</span>
+                                                <!--<span>{{ time.toTime | date: 'h:mm a' }}</span>-->
                                             </div>
                                                 <div class='col-md-4' style="padding: 0px 5px 5px 0px;margin: 0px;">
                                                     <input type="time" name="fromTime" class="form-control" ng-model = "time.fromTime">
-                                                    <span>{{ time.fromTime | date: 'h:mm a' }}</span>
+                                                    <!--<span>{{ time.fromTime | date: 'h:mm a' }}</span>-->
                                                 </div>
                                             </div>
                                         </div>
