adding date/time for posts

--- a/src/main/resources/static/html/signup_page.html
+++ b/src/main/resources/static/html/signup_page.html
@@ -15,7 +15,7 @@
     <script src="../js/material-lib/angular-material.min.js"></script>
   </head>
   <body ng-app="SkillsApp">
-    <div class='container'>
+    <div class='container' ng-cloak>
       <div class='panel panel-primary dialog-panel'>
         <div class='panel-heading'>
           <h5>ShowYourSkillz - SignUp</h5>
