--- a/src/main/resources/static/html/courseHome.html
+++ b/src/main/resources/static/html/courseHome.html
@@ -78,7 +78,7 @@
                     <form class='form-horizontal' role='form' name="userForm" ng-submit="submitForm(userForm.$valid)"
                           novalidate>
                         <div class='form-group'>
-                            <label class='control-label col-md-2 col-md-offset-2' for='Skill Name'>Skill Name : </label>
+                            <label class='control-label col-md-2 col-md-offset-2' for='Skill Name' style= "padding-top: 0px;">Skill Name : </label>
                             <div class='col-md-6'>
                                 <div class='form-group'>
                                     <div class='col-md-11'>
@@ -90,11 +90,21 @@
 
 
                         <div class='form-group'>
-                            <label class='control-label col-md-2 col-md-offset-2'>Category : </label>
+                            <label class='control-label col-md-2 col-md-offset-2' style= "padding-top: 0px;">Category : </label>
                             <div class='col-md-6'>
                                 <div class='form-group'>
                                     <div class='col-md-11'>
                                         <p>{{cate_gory}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='form-group'>
+                            <label class='control-label col-md-2 col-md-offset-2' style= "padding-top: 0px;">Tutor : </label>
+                            <div class='col-md-6'>
+                                <div class='form-group'>
+                                    <div class='col-md-11'>
+                                        <p>{{tutor}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -168,8 +178,8 @@
                                     <md-list-item class="md-2-line" ng-repeat="post in posts" ng-click="null">
                                       <!--<img ng-src="{{item.face}}?{{$index}}" class="md-avatar" alt="{{item.who}}" />-->
                                       <div class="md-list-item-text" layout="column">
-                                        <h3>{{ post.username }}</h3>
-                                        <!--<span class = "md-caption">{{Date.now() | date:'M/d/yy h:mm a'}}</span>-->
+                                        <h3>{{ post.username }} - 
+                                        <span class = "md-caption">{{post.postDate | date:'M/d/yy h:mm a'}}</span></h3>
                                         <p>{{ post.data }}</p>
                                       </div>
                                     </md-list-item>
