--- a/src/main/resources/static/html/interestedskills.html
+++ b/src/main/resources/static/html/interestedskills.html
@@ -66,11 +66,11 @@
     </div>
     <ul class="nav navbar-nav" style="float: left;">
         <li><a href="manageCourses.html">Posted Skills</a></li><br>
-        <li class="active"><a href="#">Enrolled Skills</a></li><br>
-        <li><a href="interestedskills.html">Interested Skills</a></li>
+        <li><a href="enrolledskills.html">Enrolled Skills</a></li><br>
+        <li class="active"><a href="#">Interested Skills</a></li>
     </ul>
 </div>
-<div class="container">
+<div class="container" ng-cloak>
     <div class="well well-sm">
         <!-- <strong>Browse Skills</strong>-->
         <!--<div class="btn-group">
@@ -79,7 +79,7 @@
                 class="glyphicon glyphicon-th"></span>Grid</a>
         </div>-->
 
-        <div id="products" class="row list-group" ng-controller="enrolledSkillsController">
+        <div id="products" class="row list-group" ng-controller="interestedSkillsController">
 
             <div ng-repeat="course in courses" trackBy $index>
                 <!--<form class="container">-->
@@ -93,14 +93,6 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <p class="lead">Tutor: {{ course.tutor }}</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-10 col-sm-10 col-md-10">
-                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-if='!course.isSubscribed' ng-click="subscribeForEmailNotification(course)">Subscribe</a>
-                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-warn col-lg-push-2" ng-if='course.isSubscribed' ng-click="unsubscribeFromEmailNotification(course)">Unsubscribe</a>
-                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-click="viewSkill(course.skillId)">Course Home</a>
-                                    <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-warn col-lg-push-2" ng-click="disEnrollSkill(course.skillId)">Dis-enroll</a>
                                 </div>
                             </div>
                         </div>
